Changes to be committed: 	modified:   docker-compose.yaml 	modified:   static/css/styles.css

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   clock-server:
     image: python:alpine
     working_dir: /clock
+    restart: unless-stopped
     env_file:
       - env
     ports:
