--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,30 @@ Babel==2.14.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
 fastapi==0.109.2
+fonttools==4.54.1
 h11==0.14.0
 httptools==0.6.1
-Jinja2==3.1.4
 idna==3.7
+Jinja2==3.1.4
+kiwisolver==1.4.7
 MarkupSafe==2.1.5
+matplotlib==3.9.2
+numpy==2.1.2
+packaging==24.1
+pillow==10.4.0
 pydantic==2.6.1
 pydantic_core==2.16.2
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.2
+setuptools==69.0.3
+six==1.16.0
 sniffio==1.3.0
 starlette==0.36.3
 typing_extensions==4.9.0
@@ -24,3 +36,4 @@ uvicorn==0.27.1
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+wheel==0.42.0
