--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,36 @@
 annotated-types==0.6.0
 anyio==4.2.0
 Babel==2.14.0
-certifi==2024.7.4
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
 fastapi==0.109.2
+fonttools==4.54.1
 h11==0.14.0
 httptools==0.6.1
-Jinja2==3.1.4
 idna==3.7
+Jinja2==3.1.4
+kiwisolver==1.4.7
 MarkupSafe==2.1.5
-pydantic==2.6.1
-pydantic_core==2.16.2
+matplotlib==3.9.2
+numpy==2.1.2
+packaging==24.1
+pillow==10.4.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.2
+six==1.16.0
 sniffio==1.3.0
 starlette==0.36.3
 typing_extensions==4.9.0
-urllib3==2.2.2
+urllib3==2.2.0
 uvicorn==0.27.1
 uvloop==0.19.0
 watchfiles==0.21.0
